--- a/COMP4952Medium/COMP4952Medium/Web.config
+++ b/COMP4952Medium/COMP4952Medium/Web.config
@@ -10,6 +10,9 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-COMP4952Medium-20141014055534.mdf;Initial Catalog=aspnet-COMP4952Medium-20141014055534;Integrated Security=True" providerName="System.Data.SqlClient"/>
+    <add name="COMP4952Medium" 
+         connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=|DataDirectory|\comp4952medium.mdf;Integrated Security=True" 
+         providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <!--
     For a description of web.config changes for .NET 4.5 see http://go.microsoft.com/fwlink/?LinkId=235367.
@@ -20,7 +23,7 @@
       </system.Web>
   -->
   <system.web>
-    <authentication mode="None"/>
+    <authentication mode="Forms"/>
     <compilation debug="true" targetFramework="4.5"/>
     <httpRuntime targetFramework="4.5.2"/>
     <pages>
@@ -68,11 +71,6 @@
       </providers>
     </sessionState>
   </system.web>
-  <system.webServer>
-    <modules>
-      <remove name="FormsAuthentication"/>
-    </modules>
-  </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
