--- a/COMP4952Medium/COMP4952Medium/COMP4952Medium.csproj
+++ b/COMP4952Medium/COMP4952Medium/COMP4952Medium.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="System.Data.Entity" />
     <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Web" />
@@ -162,6 +163,46 @@
     <Content Include="Account\TwoFactorAuthenticationSignIn.aspx" />
     <Content Include="Account\VerifyPhoneNumber.aspx" />
     <Content Include="Contact.aspx" />
+    <Content Include="images\blue-down.png" />
+    <Content Include="images\blue-left.png" />
+    <Content Include="images\blue-right.png" />
+    <Content Include="images\blue-up.png" />
+    <Content Include="images\C85_Canister.png" />
+    <Content Include="images\E540_Halberd.png" />
+    <Content Include="images\Empires_NS.png" />
+    <Content Include="images\G30_Vulcan.png" />
+    <Content Include="images\G30_Walker.png" />
+    <Content Include="images\G40-F_Ranger.png" />
+    <Content Include="images\grey-down.png" />
+    <Content Include="images\grey-left.png" />
+    <Content Include="images\grey-right.png" />
+    <Content Include="images\grey-up.png" />
+    <Content Include="images\M12_Kobalt.png" />
+    <Content Include="images\M20_Basilisk.png" />
+    <Content Include="images\Enforcer_ML85.png" />
+    <Content Include="images\P2-120_AP.png" />
+    <Content Include="images\P2-120_HE.png" />
+    <Content Include="images\P2-120_HEAT.png" />
+    <Content Include="images\P525_Marauder.png" />
+    <Content Include="images\Proton_II_PPA.png" />
+    <Content Include="images\Saron_HRB.png" />
+    <Content Include="images\Supernova_FPC.png" />
+    <Content Include="images\Supernova_PC.png" />
+    <Content Include="images\Supernova_VPC.png" />
+    <Content Include="images\Titan-150_AP.png" />
+    <Content Include="images\Titan-150_HE.png" />
+    <Content Include="images\Titan-150_HEAT.png" />
+    <Content Include="widget\css\rcarousel.css" />
+    <Content Include="widget\img\loader.gif" />
+    <Content Include="widget\lib\jquery-1.7.1.js" />
+    <Content Include="widget\lib\jquery-1.7.1.min.js" />
+    <Content Include="widget\lib\jquery.ui.core.js" />
+    <Content Include="widget\lib\jquery.ui.core.min.js" />
+    <Content Include="widget\lib\jquery.ui.rcarousel.js" />
+    <Content Include="widget\lib\jquery.ui.rcarousel.min.js" />
+    <Content Include="widget\lib\jquery.ui.widget.js" />
+    <Content Include="widget\lib\jquery.ui.widget.min.js" />
+    <None Include="Content\bootstrap.css~" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\FixedDivs.css" />
@@ -173,7 +214,16 @@
     <Content Include="Content\jquery-ui.theme.min.css" />
     <Content Include="Content\Site.css" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
+    <Content Include="images\background_image.jpg" />
     <Content Include="images\crosshair.png" />
+    <Content Include="images\Empires_NC.png" />
+    <Content Include="images\Empires_TR.png" />
+    <Content Include="images\Empires_VS.png" />
+    <Content Include="images\logo-lg.png" />
+    <Content Include="images\Mainpage_Footer.png" />
+    <Content Include="images\nc-empire-nav-icon.png" />
+    <Content Include="images\page-cap.png" />
+    <Content Include="images\tr-empire-nav-icon.png" />
     <Content Include="images\ui-bg_diagonals-thick_18_b81900_40x40.png" />
     <Content Include="images\ui-bg_diagonals-thick_20_666666_40x40.png" />
     <Content Include="images\ui-bg_flat_10_000000_40x100.png" />
@@ -188,6 +238,7 @@
     <Content Include="images\ui-icons_ef8c08_256x240.png" />
     <Content Include="images\ui-icons_ffd27a_256x240.png" />
     <Content Include="images\ui-icons_ffffff_256x240.png" />
+    <Content Include="images\vs-empire-nav-icon.png" />
     <Content Include="packages.config" />
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
     <Content Include="fonts\glyphicons-halflings-regular.ttf" />
@@ -231,7 +282,9 @@
     <Content Include="Global.asax" />
     <Content Include="Site.Master" />
     <Content Include="ViewSwitcher.ascx" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Bundle.config" />
     <None Include="Project_Readme.html" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
@@ -242,6 +295,7 @@
     <None Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
+    <Content Include="widget\license" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Account\AddPhoneNumber.aspx.cs">
@@ -377,7 +431,11 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\Category.cs" />
     <Compile Include="Models\IdentityModels.cs" />
+    <Compile Include="Models\Item.cs" />
+    <Compile Include="Models\ItemContext.cs" />
+    <Compile Include="Models\ItemDatabaseInitializer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Site.Master.cs">
       <DependentUpon>Site.Master</DependentUpon>
