--- a/COMP4952Medium/COMP4952Medium/COMP4952Medium.csproj
+++ b/COMP4952Medium/COMP4952Medium/COMP4952Medium.csproj
@@ -162,6 +162,7 @@
     <Content Include="Account\ResetPasswordConfirmation.aspx" />
     <Content Include="Account\TwoFactorAuthenticationSignIn.aspx" />
     <Content Include="Account\VerifyPhoneNumber.aspx" />
+    <Content Include="AdminPage\Admin.aspx" />
     <Content Include="Contact.aspx" />
     <Content Include="images\blue-down.png" />
     <Content Include="images\blue-left.png" />
@@ -202,6 +203,7 @@
     <Content Include="widget\lib\jquery.ui.rcarousel.min.js" />
     <Content Include="widget\lib\jquery.ui.widget.js" />
     <Content Include="widget\lib\jquery.ui.widget.min.js" />
+    <Content Include="AdminPage\Web.config" />
     <None Include="Content\bootstrap.css~" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
@@ -243,7 +245,9 @@
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
     <Content Include="fonts\glyphicons-halflings-regular.ttf" />
     <Content Include="fonts\glyphicons-halflings-regular.eot" />
-    <Content Include="Account\Web.config" />
+    <Content Include="Account\Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
@@ -402,6 +406,13 @@
     </Compile>
     <Compile Include="Account\VerifyPhoneNumber.aspx.designer.cs">
       <DependentUpon>VerifyPhoneNumber.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="AdminPage\Admin.aspx.cs">
+      <DependentUpon>Admin.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="AdminPage\Admin.aspx.designer.cs">
+      <DependentUpon>Admin.aspx</DependentUpon>
     </Compile>
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="About.aspx.cs">
